--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 description: "「好记性不如烂笔头」"
-header-img: "img/bg-little-universe.jpg"
+header-img: "img/tag-bg.jpg"
 ---
 
 <!--
