--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ multilingual: true
 </div>
 
 
-{% if site.disqus_username %}
+<!-- {% if site.disqus_username %} -->
 <!-- disqus 评论框 start -->
 <!-- disqus 评论框 end -->
 
