--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「喵喵喵~」"
+description: "「厚积薄发永远正确」"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
